# prism

./: .gitignore  CLAUDE.md  MIGRATION_FROM_R.md  README.md  pyproject.toml
docs/: user-guide.md
examples/quickstart/: .gitignore  _quarto.yml  generate_data.py
examples/quickstart/_common/: accuracy.qmd  data_overview.qmd  footer.qmd  header.qmd  ks_statistic.qmd  rank_ordering.qmd  scorecard.qmd  setup.qmd  stability.qmd
examples/quickstart/_output/reports/credit_risk_model/: monitoring.html
examples/quickstart/config/: commentary.xlsx  project.yaml
examples/quickstart/config/models/: credit_risk_model.yaml
examples/quickstart/data/: sample_scores.csv
examples/quickstart/reports/credit_risk_model/: monitoring.qmd
prism/: __init__.py  cli.py  colors.py  connector.py  core.py  helpers.py  resolver.py  runner.py
prism/metrics/: __init__.py  accuracy.py  rank_ordering.py  registry.py  stability.py
prism/templates/: _quarto.yml
prism/templates/_common/: accuracy.qmd  header.qmd  rank_ordering.qmd  scorecard.qmd  setup.qmd
prism/templates/config/: project.yaml
prism/templates/config/models/: example_model.yaml
prism/templates/reports/example_model/: monitoring.qmd
tests/: test_colors.py  test_connector.py  test_core.py  test_helpers.py  test_resolver.py
